<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/project_name_label"
              style="?android:listSeparatorTextViewStyle" />

    <EditText android:id="@+id/project_title"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="16dp"
              android:layout_marginRight="16dp"
              android:hint="@string/project_name_hint" />

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/project_details_label"
              style="?android:listSeparatorTextViewStyle" />

    <Button android:id="@+id/project_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

    <CheckBox android:id="@+id/project_finished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/project_finished_label" />

    <Button android:id="@+id/project_coworkerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/project_coworker_text" />

    <Button android:id="@+id/project_reportButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/project_report_text" />

</LinearLayout>